# Customer_Engagement-_Analytics

./: requirements.txt  setup.py
.devcontainer/: devcontainer.json
Customer_Retension_Streamlit/: main.py  pyproject.toml  requirements.txt
artifacts/: preprocessor.pkl  raw.csv  test.csv  train.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: EDA.ipynb  model_training.ipynb
src/: exception.py  logger.py  utils.py
src/components/: Feature_Engineering.py  data_ingestion.py  data_transformation.py  model_trainer.py
