[project]
name = "customer-retension-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "streamlit",
    "plotly",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost",
    "shap",
    "catboost",
    "imbalanced-learn",
    "scipy",
    "dill",]
